<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/nav_graph"
            app:startDestination="@id/reviewsFragment">

    <fragment
        android:id="@+id/reviewsFragment"
        android:name="com.assignment.gorgeouslyfab.features.presentation.reviews.ReviewsFragment"
        android:label="@string/fragment_reviews_label"
        tools:layout="@layout/fragment_reviews">

        <action
            android:id="@+id/action_reviewsFragment_to_createReviewFragment"
            app:destination="@id/createReviewFragment"/>
    </fragment>

    <fragment
        android:id="@+id/createReviewFragment"
        android:name="com.assignment.gorgeouslyfab.features.presentation.createreview.CreateReviewFragment"
        android:label="@string/fragment_create_review_label"
        tools:layout="@layout/fragment_create_review">
        <action
            android:id="@+id/action_createReviewFragment_to_designerFragment"
            app:destination="@id/designerFragment"/>
    </fragment>

    <fragment
        android:id="@+id/designerFragment"
        android:name="com.assignment.gorgeouslyfab.features.presentation.designer.DesignerFragment"
        android:label="@string/fragment_designer_label"
        tools:layout="@layout/fragment_designer">

        <argument
            android:name="review"
            android:defaultValue="@null"
            app:argType="com.assignment.gorgeouslyfab.features.presentation.model.ReviewView"
            app:nullable="true"/>

        <action
            android:id="@+id/action_designerFragment_to_feelFragment"
            app:destination="@id/feelFragment"/>
    </fragment>

    <fragment
        android:id="@+id/feelFragment"
        android:name="com.assignment.gorgeouslyfab.features.presentation.feel.FeelFragment"
        android:label="@string/fragment_feel_label"
        tools:layout="@layout/fragment_feel">

        <argument
                android:name="review"
                android:defaultValue="@null"
                app:argType="com.assignment.gorgeouslyfab.features.presentation.model.ReviewView"
                app:nullable="true"/>

        <action
            android:id="@+id/action_feelFragment_to_selfieFragment"
            app:destination="@id/selfieFragment"/>
    </fragment>

    <fragment
        android:id="@+id/selfieFragment"
        android:name="com.assignment.gorgeouslyfab.features.presentation.selfie.SelfieFragment"
        android:label="@string/fragment_selfie_label"
        tools:layout="@layout/fragment_selfie">

        <argument
                android:name="review"
                android:defaultValue="@null"
                app:argType="com.assignment.gorgeouslyfab.features.presentation.model.ReviewView"
                app:nullable="true"/>

        <action
            android:id="@+id/action_selfieFragment_to_reviewsFragment"
            app:destination="@id/reviewsFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true"/>
    </fragment>

</navigation>
